--- a/example2/index.html
+++ b/example2/index.html
@@ -5,13 +5,14 @@
 		<meta name="viewport" content="user-scalable=0" />
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
-		<title>MiniJoy</title>
+		<title>ad</title>
 	</head>
 
 	<style type="text/css">
 		* {
 			margin: 0;
 			padding: 0;
+			background-color: black;
 		}
 	</style>
 	
