--- a/test3/index.html
+++ b/test3/index.html
@@ -306,7 +306,7 @@ function update() {
 				}	
 		}
 	}else{
-		if((tutorialReactivar==true)&&(!this.game.input.pointer1n)){
+		if((tutorialReactivar==true)&&(!this.game.input.pointer1)){
 			tutorialReactivar=false;
 			if(ptn0==true&&ptn1==true&&ptn2==true&&ptn3==true&&ptn4==true&&ptn5==true&&ptn6==true&&ptn7==true&&ptn8==true&&ptn9==true){
 				tutorialReactivar=false;
