--- a/wacronymtest/index.html
+++ b/wacronymtest/index.html
@@ -132,7 +132,7 @@ function createInput(x, y){
       canvas: bmd.canvas,
       fontSize: 48,
       fontFamily: 'Grobold',
-      fontColor: '#22BAFF',
+      fontColor: '#fff',
       fontWeight: 'bold',
       width: 550,
       height:70,
@@ -140,7 +140,7 @@ function createInput(x, y){
       borderWidth: 1,
       borderColor: '#000',
       borderRadius: 20,
-      placeHolderColor:'#fff',
+      placeHolderColor:'#22BAFF',
       boxShadow: '1px 1px 0px #434280',
       backgroundColor:'#12002B',
       innerShadow: '0px 0px 5px rgba(0, 0, 0, 0.5)',
