--- a/panglev2/index.html
+++ b/panglev2/index.html
@@ -58,7 +58,7 @@
         function fnctabtn() {
             console.log("TTTTT")
             var userAgent = navigator.userAgent || navigator.vendor;
-            window.playableSDK.openAppStore();
+            window.openAppStore();
         }
     </script>
 </body>
