--- a/panglev5/index.html
+++ b/panglev5/index.html
@@ -56,7 +56,14 @@
             window.playableSDK.openAppStore();
         }
 
-        
+        window.playableSDK.isViewable().then((viewable) =>{
+            if(viewable){
+
+            }
+            else{
+                
+            }
+        });
     </script>
 </body>
 
