--- a/walls2/unity ads/index.html
+++ b/walls2/unity ads/index.html
@@ -18,6 +18,10 @@
 			overflow: hidden;
 
 		}
+
+		body {
+			display:none;
+		}
 	</style>
 	
 	<body>
@@ -31,6 +35,7 @@
 		</script>
 		<script type="text/javascript"  >
 	
+var urlStore = "https://play.google.com/store/apps/details?id=com.NiJo.Walls";
 	
 var game = new Phaser.Game({
   width: 720,
@@ -42,7 +47,7 @@ var game = new Phaser.Game({
 });
 
 function onClickDownload(){
-  alert('your app store') 
+    mraid.open(urlStore); 
 }
 
 function _base64ToArrayBuffer(base64) {
@@ -433,6 +438,44 @@ function CreateLevel1 () {
     this.n1l9.addChild(this.n1l5);
     this.n1l9.addChild(this.n1l10);
   
+}
+
+// Wait for the SDK to become ready: 
+if (mraid.getState() === 'loading') {
+    // If the SDK is still loading, add a listener for the 'ready' event:
+    mraid.addEventListener('ready', onSdkReady); 
+} else {
+    // Otherwise, if the SDK is ready, execute your function:
+    onSdkReady(); 
+}
+
+// Implement a function that shows the ad when it first renders:
+function onSdkReady() {
+    // The viewableChange event fires if the ad container's viewability status changes.
+    // Add a listener for the viewabilityChange event, to handle pausing and resuming: 
+    mraid.addEventListener('viewableChange', viewableChangeHandler);
+    // The isViewable method returns whether the ad container is viewable on the screen.
+    if (mraid.isViewable()) {
+        // If the ad container is visible, play the ad:
+        showMyAd(); 
+    }
+}
+
+// Implement a function for executing the ad:
+function showMyAd() { 
+    // Insert code for showing your playable ad.
+    var el = document.body;
+    el.style.display = 'block';
+}
+
+// Implement a function that handles pausing and resuming the ad based on visibility:
+function viewableChangeHandler(viewable) {
+    if(viewable) {
+        // If the ad is viewable, show the ad:
+        showMyAd(); 
+    } else {
+        // If not, pause the ad.
+    }
 }
 		</script>
 	</body>
