--- a/walls4/facebook/index.html
+++ b/walls4/facebook/index.html
@@ -43,7 +43,7 @@ var game = new Phaser.Game({
 });
 
 function onClickDownload(){
-  alert('your app store') 
+  FbPlayableAd.onCTAClick();	 
 }
 
 function _base64ToArrayBuffer(base64) {
