--- a/panglev7/index.html
+++ b/panglev7/index.html
@@ -57,7 +57,7 @@
     	var iOSURL = 'https://apps.apple.com/us/app/dragonvale/id440045374';
 
         function fnctabtn() {
-            window.playableSDK.openAppStore(androidURL);
+            window.playableSDK.openAppStore();
         }
 
         window.playableSDK.isViewable().then((viewable) =>{
