--- a/walls2render/unityads/index.html
+++ b/walls2render/unityads/index.html
@@ -35,7 +35,7 @@
 var game = new Phaser.Game({
   width: 720,
   height: 1280,  
-  renderer: Phaser.CANVAS,
+  renderer: Phaser.WEBGL,
     resolution:1,
     antialias:true,
   state: this
