--- a/walls1/unityads android/index.html
+++ b/walls1/unityads android/index.html
@@ -40,7 +40,7 @@
   state: this
 });
 
-var urlAndroid = "https://apps.apple.com/us/app/walls-launch-the-ball-game/id1547499394";
+var urlAndroid = "https://play.google.com/store/apps/details?id=com.NiJo.Walls";
 
 
 function onClickDownload(){
@@ -280,7 +280,6 @@ function onDragUpdate() {
    	catchFlag = true;
  
     this.player.body.moves = false;
-    this.player.body.velocity.setTo(0, 0);
  
     var mouseX = game.input.x;
     var mouseY = game.input.y;
