--- a/example1/index.html
+++ b/example1/index.html
@@ -69,12 +69,17 @@ function init(){
 
 function preload() {
 	this.stage.disableVisibilityChange = false;
-	
+    
+    if (this.game.device.desktop) {
+        this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+        this.scale.pageAlignHorizontally = true;
+        this.scale.pageAlignVertically = true
+    } else {
         this.scale.scaleMode = Phaser.ScaleManager.EXACT_FIT;
         this.scale.fullScreenScaleMode = Phaser.ScaleManager.EXACT_FIT;
         this.scale.pageAlignHorizontally = true;
         this.scale.pageAlignVertically = true
-   
+    }
 
 	this.bgColor = "#000000"; //Background Color
     this.textDefault = { font: "normal 55px Bebas Neue", fill: "#ffffff", boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
