--- a/example2/index.html
+++ b/example2/index.html
@@ -48,7 +48,16 @@ function _base64ToArrayBuffer(base64) {
 
 function preload() {
 	this.stage.disableVisibilityChange = true;
-    this.scale.scaleMode = Phaser.ScaleManager.EXACT_FIT;
+        if (this.game.device.desktop) {
+        this.scale.scaleMode = Phaser.ScaleManager.SHOW_ALL;
+        this.scale.pageAlignHorizontally = true;
+        this.scale.pageAlignVertically = true
+    } else {
+        this.scale.scaleMode = Phaser.ScaleManager.EXACT_FIT;
+        this.scale.fullScreenScaleMode = Phaser.ScaleManager.EXACT_FIT;
+        this.scale.pageAlignHorizontally = true;
+        this.scale.pageAlignVertically = true
+    }
 
 	this.bgColor = "#1A1A1A"; //Background Color
 	this.contentColor = 0xffffff; //Content Game color
