--- a/pofv3/index.html
+++ b/pofv3/index.html
@@ -130,6 +130,7 @@ function setCTA(){
 function setBase(){
     this.title = game.add.sprite(this.game.width*0.5, this.game.height*0.1,'atlas','title.png');
     this.title.anchor.set(0.5);
+    this.title.scale.set(0.7);
 
     this.picture = game.add.sprite(this.game.width*-1.2, this.game.height*0.45,'img1');
     this.picture.anchor.set(0.5);
