--- a/skylinkV3/index.html
+++ b/skylinkV3/index.html
@@ -117,6 +117,7 @@ function create() {
 }
 
 function startLevel2(){
+	this.fillGrey2.removeAll();
 	this.level = 2;
 	this.list = ['','','',''];
 	this.bgpicture1.children[0].frameName = '3.png';
@@ -310,6 +311,37 @@ function setBase(){
     this.grey.anchor.set(0.5);
     this.grey.scale.set(1,0.8);
 
+    this.darkLight = game.add.graphics(0,0);
+    this.darkLight.beginFill(0x000000);
+    this.darkLight.drawRect(0, 0, this.game.width, this.game.height);
+    this.darkLight.endFill();
+    this.darkLight.alpha = 0.5;
+
+    this.fillGrey2 = this.game.add.group();
+    this.fillGrey2.x = this.game.width*0.05;
+    this.fillGrey2.y = this.game.height*0.52;
+    this.fillGrey2.create(0,0, 'atlas','tile.png');
+    this.fillGrey2.create(0, 0,'atlas','tile.png');
+    this.fillGrey2.create(0, 0,'atlas','tile.png');
+    this.fillGrey2.setAll('anchor.x', 0.5);
+    this.fillGrey2.setAll('anchor.y', 0.5);
+    this.fillGrey2.align(7, 1, 94, 94,Phaser.CENTER);
+   
+    var tempText = game.add.text(0,0, 'C', this.textWhite);
+    tempText.anchor.set(0.5);
+    tempText.alpha = 0.6;
+
+    var tempText2 = game.add.text(0,0, 'U', this.textWhite);
+    tempText2.anchor.set(0.5);
+    tempText2.alpha = 0.6;
+
+    var tempText3 = game.add.text(0,0, 'P', this.textWhite);
+    tempText3.anchor.set(0.5);
+    tempText3.alpha = 0.6;
+
+    this.fillGrey2.children[0].addChild(tempText);
+    this.fillGrey2.children[1].addChild(tempText2);
+    this.fillGrey2.children[2].addChild(tempText3);
     this.fillGrey = this.game.add.group();
     this.fillGrey.inputEnableChildren = true;
     this.fillGrey.onChildInputUp.add(undo, this);
@@ -326,17 +358,13 @@ function setBase(){
     this.fillGrey.setAll('anchor.y', 0.5);
     this.fillGrey.align(7, 1, 94, 94,Phaser.CENTER);
 
+
+
     let count = 0;
     this.fillGrey.forEach(function(tile){
 		tile.inUse = false;
 		tile.index = count++;
     },this);
-
-    this.darkLight = game.add.graphics(0,0);
-    this.darkLight.beginFill(0x000000);
-    this.darkLight.drawRect(0, 0, this.game.width, this.game.height);
-    this.darkLight.endFill();
-    this.darkLight.alpha = 0.5;
    
     this.fill = this.game.add.group();
     this.fill.x = this.game.width*0.05;
