--- a/jigsortV3/index.html
+++ b/jigsortV3/index.html
@@ -38,7 +38,7 @@ var game = new Phaser.Game({
 });
 
 function onClickDownload(){
-	//alert('your url here');  	
+	alert('your url here');  	
 }
 
 function _base64ToArrayBuffer(base64) {
