--- a/cleanfoxV2/index.html
+++ b/cleanfoxV2/index.html
@@ -257,7 +257,7 @@ function newPic(){
     }
     else{
     	this.pointText.setText('-'+this.erase[this.imageCounter])
-    	this.pointText2.setText('-'+this.erase[this.imageCounter])
+    	this.pointText2.setText('+'+this.erase[this.imageCounter])
     	this.picture.children[0].setText(this.emails[this.imageCounter]);
     	this.picture.children[1].setText(this.spams[this.imageCounter]);
     	this.picture.children[2].setText(this.rate[this.imageCounter]);
