--- a/cleanfox10/index.html
+++ b/cleanfox10/index.html
@@ -66,6 +66,7 @@ function preload() {
     this.textWhiteBig = { font: "bold 44px Arial", fill: "#ffffff",stroke: '#ffffff',strokeThickness:2, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
     this.textBlack2 = { font: "bold 36px Arial", fill: "#191919",stroke: '#191919',strokeThickness:1, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
     this.textWhiteBtn2 = { font: "bold 54px Arial", fill: "#fff",stroke: '#78757C',strokeThickness:6, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
+    this.textBlack3 = { font: "bold 36px Arial", fill: "#78757C",stroke: '#191919',strokeThickness:6, boundsAlignH: "center", boundsAlignV: "middle" ,align: "center" };
 
 	game.stage.backgroundColor = this.bgColor;
 	var json = '{"frames": [{"filename": "sweep.png", "frame": {"x":1310,"y":645,"w":711,"h":256}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":711,"h":256}, "sourceSize": {"w":711,"h":256} }, {"filename": "redbtn.png", "frame": {"x":379,"y":1264,"w":148,"h":148}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":148,"h":148}, "sourceSize": {"w":148,"h":148} }, {"filename": "playBtn.png", "frame": {"x":529,"y":1264,"w":433,"h":103}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":433,"h":103}, "sourceSize": {"w":433,"h":103} }, {"filename": "msg.png", "frame": {"x":2,"y":2,"w":720,"h":641}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":720,"h":641}, "sourceSize": {"w":720,"h":641} }, {"filename": "mail.png", "frame": {"x":2,"y":1264,"w":225,"h":225}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":225,"h":225}, "sourceSize": {"w":225,"h":225} }, {"filename": "logo.png", "frame": {"x":964,"y":1264,"w":434,"h":102}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":434,"h":102}, "sourceSize": {"w":434,"h":102} }, {"filename": "Heap.png", "frame": {"x":2,"y":645,"w":720,"h":617}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":720,"h":617}, "sourceSize": {"w":720,"h":617} }, {"filename": "greenbtn.png", "frame": {"x":229,"y":1264,"w":148,"h":148}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":148,"h":148}, "sourceSize": {"w":148,"h":148} }, {"filename": "googlestore.png", "frame": {"x":1400,"y":1264,"w":252,"h":70}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":252,"h":70}, "sourceSize": {"w":252,"h":70} }, {"filename": "forest.png", "frame": {"x":724,"y":2,"w":720,"h":637}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":720,"h":637}, "sourceSize": {"w":720,"h":637} }, {"filename": "card.png", "frame": {"x":724,"y":645,"w":584,"h":616}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":584,"h":616}, "sourceSize": {"w":584,"h":616} }, {"filename": "appstore.png", "frame": {"x":1654,"y":1264,"w":240,"h":68}, "rotated": false, "trimmed": false, "spriteSourceSize": {"x":0,"y":0,"w":240,"h":68}, "sourceSize": {"w":240,"h":68} }], "meta": {"app": "https://www.codeandweb.com/texturepacker", "version": "1.0", "image": "assets2.png", "format": "RGBA8888", "size": {"w":2023,"h":1491}, "scale": "1", "smartupdate": "$TexturePacker:SmartUpdate:71cf070cc86209aea6b4a240b6d895b3:9ee55c84874a2d9d48745147afe99307:09550fb4fdcdfdbbc019b92dacf78d7a$"} }';
@@ -275,13 +276,13 @@ function setBase(){
 	this.fox.scale.set(0.4);
 	this.picture.addChild(this.fox);
 
-	this.pointText = game.add.text(this.game.width*0.5, this.game.height*0.33, '-'+this.erase[this.imageCounter], this.textBlack);
+	this.pointText = game.add.text(this.game.width*0.5, this.game.height*0.33, '-'+this.erase[this.imageCounter], this.textBlack3);
     this.pointText.fontSize = 40;
     this.pointText.anchor.set(0.5);
     this.pointText.alpha = 0;
     this.pointTween = game.add.tween(this.pointText).to({ alpha: 1}, 500, Phaser.Easing.Sinusoidal.Out).to({ alpha: 0}, 50, Phaser.Easing.Sinusoidal.In)
 
-    this.pointText2 = game.add.text(this.game.width*0.5, this.game.height*0.33, this.erase[this.imageCounter]+' KEPT', this.textBlack);
+    this.pointText2 = game.add.text(this.game.width*0.5, this.game.height*0.33, this.erase[this.imageCounter]+' KEPT', this.textBlack3);
     this.pointText2.fontSize = 40;
     this.pointText2.anchor.set(0.5);
     this.pointText2.alpha = 0;
@@ -339,7 +340,7 @@ function movePic(btn, pointer, type){
 			this.foxMsg1.children[0].setText(Math.floor(this.emailsiconcount));
 		}, this);
 
-		game.add.tween(this.foxMsg1.scale).to({ x: 1.4, y: 1.4}, 400, Phaser.Easing.Sinusoidal.In).to({ x: 1, y: 1}, 300, Phaser.Easing.Sinusoidal.Out,true)
+		game.add.tween(this.foxMsg1.scale).to({ x: 1.3, y: 1.3}, 400, Phaser.Easing.Sinusoidal.In).to({ x: 1, y: 1}, 300, Phaser.Easing.Sinusoidal.Out,true)
 
 		
 		pointsTween.start();
