--- a/alchimerge/index.html
+++ b/alchimerge/index.html
@@ -6,7 +6,7 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
 		<meta content="yes" name="apple-mobile-web-app-capable"></meta>
 		<meta content="black" name="apple-mobile-web-app-status-bar-style"></meta>
-		<title>Jigsort</title>
+		<title>Alchimerge</title>
 	</head>
 
 	<style type="text/css">
